# BreezyAssistant4

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/breezy/assistant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/breezy/assistant/: AISettingsActivity.kt  AntiStalkerActivity.kt  AntiStalkerScanner.kt  AppDatabase.kt  AppNoteActivity.kt  AppStartupNoteService.kt  AppUsageActivity.kt  BaseActivity.kt  BatteryMonitor.kt  BatteryReceiver.kt  BreezyAccessibilityService.kt  BreezyMemory.kt  BreezySettingsActivity.kt  CallScreeningActivity.kt  CallerDao.kt  CallerIdActivity.kt  CallerIdService.kt  CallerInfo.kt  CameraMicMonitor.kt  ChatBubbleActivity.kt  ChatHistoryManager.kt  ConstitutionalAI.kt  CrisisDetector.kt  CrisisEngine.kt  DownloadReceiver.kt  EFlareActivity.kt  EFlareService.kt  FloatingCircleService.kt  FullChatActivity.kt  GeminiEngine.kt  GraphView.kt  GroqEngine.kt  HardwareInspector.kt  HardwareInspectorActivity.kt  HelpActivity.kt  HotspotBridgeActivity.kt  InbuiltAppsActivity.kt  IntentMatcher.kt  LLMInference.kt  MainActivity.kt  (+41 more)
app/src/main/res/layout/: activity_anti_stalker.xml  activity_app_note.xml  activity_main.xml  activity_model_download.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
